name: ghc-typelits-extra-sianormalise
cabal-version: >= 1.24
build-type: Simple
version: 0.0.1
license: MIT
license-file: LICENSE

library
  default-language: Haskell2010
  build-depends: base >= 4 && < 5,
                 ghc >= 8 && < 9,
                 containers >= 0.6 && < 0.7,
                 ghc-typelits-extra >= 0.4 && < 0.5
  exposed-modules:
    GHC.TypeLits.Extra.SIA.Solver

