name: Test
cabal-version: >= 1.24
build-type: Simple
version: 1.0.0

executable test
  default-language: Haskell2010
  build-depends:  base >= 4 && < 5,
                  ghc-typelits-extra >= 0.4 && < 0.5,
                  ghc-typelits-knownnat >= 0.7 && < 0.8,
                  ghc-typelits-natnormalise >= 0.7 && < 0.8,
                  ghc-typelits-extra-sianormalise >= 0.0.1 && < 0.1
  main-is: Test.hs

